--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <canvas id="gameScreen"></canvas>
   <script src="howler.js"></script>
-  <script src="main.js"></script>
+  <script src="help.js"></script>
 </body>
 
 </html>
