--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAGGER</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -10,9 +11,10 @@
 </head>
 
 <body>
+  <div id="messageMobile"></div>
   <canvas id="gameScreen"></canvas>
   <script src="howler.js"></script>
-  <script src="help.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
