--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="messageMobile"></div>
   <canvas id="gameScreen"></canvas>
   <script src="howler.js"></script>
-  <script src="main.js"></script>
+  <script src="help.js"></script>
 </body>
 
 </html>
