--- a/index.html
+++ b/index.html
@@ -2,19 +2,32 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3W0FBSF66Y"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-3W0FBSF66Y');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAGGER</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preload" href="hinted-JetBrainsMono-SemiBold.woff2" as="font" type="font/woff2" crossorigin>
 </head>
 
 <body>
-  <div id="messageMobile"></div>
-  <canvas id="gameScreen"></canvas>
-  <script src="howler.js"></script>
-  <script src="help.js"></script>
+<div id="messageMobile"></div>
+<canvas id="gameScreen"></canvas>
+<script src="howler.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
