--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 </head>
 
 <body>
-<div id="messageMobile"></div>
+<div id="descriptionTop">TAGGER is the ideal Two players One keyboard arcade game to test your WASD skills against your friends!</div>
+<div id="descriptionBottom">TAGGER is a fun arcade game to test your reflexes against your friends. Careful, It's spicy!</div>
 <canvas id="gameScreen"></canvas>
 <script src="howler.js"></script>
-<script src="help.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
