--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div id="descriptionBottom">TAGGER is a fun arcade game to test your reflexes against your friends. Careful, It's spicy!</div>
 <canvas id="gameScreen"></canvas>
 <script src="howler.js"></script>
-<script src="main.js"></script>
+<script src="help.js"></script>
 </body>
 
 </html>
